--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,7 @@ add_library(myrtchallenge
     canvas.cpp
     colors.cpp
     matrices.cpp
+    rays.cpp
     transformations.cpp
     tuples.cpp
     ${HEADER_LIST})
