--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,6 +23,11 @@ target_compile_features(rays_feature PRIVATE cxx_std_20)
 target_link_libraries(rays_feature PRIVATE myrtchallenge Catch2::Catch2WithMain)
 add_test(NAME rays_feature COMMAND rays_feature)
 
+add_executable(spheres_feature spheres_feature.cpp)
+target_compile_features(spheres_feature PRIVATE cxx_std_20)
+target_link_libraries(spheres_feature PRIVATE myrtchallenge Catch2::Catch2WithMain)
+add_test(NAME spheres_feature COMMAND spheres_feature)
+
 add_executable(transformations_feature transformations_feature.cpp)
 target_compile_features(transformations_feature PRIVATE cxx_std_20)
 target_link_libraries(transformations_feature PRIVATE myrtchallenge Catch2::Catch2WithMain)
