--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,6 +13,11 @@ target_compile_features(canvas_feature PRIVATE cxx_std_20)
 target_link_libraries(canvas_feature PRIVATE myrtchallenge Catch2::Catch2WithMain)
 add_test(NAME canvas_feature COMMAND canvas_feature)
 
+add_executable(intersections_feature intersections_feature.cpp)
+target_compile_features(intersections_feature PRIVATE cxx_std_20)
+target_link_libraries(intersections_feature PRIVATE myrtchallenge Catch2::Catch2WithMain)
+add_test(NAME intersections_feature COMMAND intersections_feature)
+
 add_executable(matrices_feature matrices_feature.cpp)
 target_compile_features(matrices_feature PRIVATE cxx_std_20)
 target_link_libraries(matrices_feature PRIVATE myrtchallenge Catch2::Catch2WithMain)
