--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,6 +8,11 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(Catch2)
 # Adds Catch2::Catch2
 
+add_executable(camera_feature camera_feature.cpp)
+target_compile_features(camera_feature PRIVATE cxx_std_20)
+target_link_libraries(camera_feature PRIVATE myrtchallenge Catch2::Catch2WithMain)
+add_test(NAME camera_feature COMMAND camera_feature)
+
 add_executable(canvas_feature canvas_feature.cpp)
 target_compile_features(canvas_feature PRIVATE cxx_std_20)
 target_link_libraries(canvas_feature PRIVATE myrtchallenge Catch2::Catch2WithMain)
